Make extensive modifications to the project POM
Add - argLine property containing JVM execution options.
Add - property gpg.argList for configuring the GPG options.
Add - github.server.password property for specifying the password for
	  the git repository hosted remotely on Github.
Remove - scm plugin declaration because it was no longer being called
		 during release preparations.
Refactor - gpg-plugin documentation for greater clarity and to includes
		   links to explanitory websites.
Refactor - pom.xml to remove various unneeded whitepsaces and newlines.
Fix - maven-plugin-plugin JDK version check to correctly use the Java
	  version instead of the retrolambda target version.
Fix - default-integegration-test usage of maven-antrun-plugin to
	  use the target configuration element instead of the outdated
	  task element which was generating a warning.
Modify - release git tags from v.0.0 to version-0.0 for greater 
		 readability. 
Modify - default-integration-test to hide plugin executions behind
		 a non-automatic profile.
Modify - maven-invoker-plugin to manually trigger the 
		 default-integration-test profile and to merge the available
		 settings.xml files.
Modify - invoker plugin to run install goal during pre-integration-test
		 phase.
Modify - unit tests forking to be thread heavy during surefire-plugin
		 execution.
Modify - pom.xml version to be version 1.0-SNAPSHOT once again.